# Cascade_Trajectory

./: .gitignore  CMakeLists.txt  README.md  cross_correlation.f90  plot_correlation_traj.py
BMlonger/: BM.py  BMoriginal.txt  README.md  cc.f90  makefile.ifort  run.sl
BMtest/: BM.py  BMoriginal.txt  BMoriginal_1000_Cray.txt  BMoriginal_1000_GNU.txt  BMoriginal_1000_Intel.txt  BMoriginal_25000_Cray.txt  BMoriginal_25000_GNU.txt  BMoriginal_25000_Intel.txt  BMoriginal_gfortran.txt  BMoriginal_ifort.txt  CMakeLists.txt  README.md  analyse-benchmark.py  cc.f90  cc_matrix.f90  makefile.gfortran  nesi-project.md  params.nml  params_test.nml.in  run-benchmark-cray-matrix.sl  run-benchmark-cray.sl  run-benchmark-gfortran-matrix.sl  run-benchmark-gfortran.sl  run-benchmark-ifort-matrix.sl  run-benchmark-ifort-single.sl  run-benchmark-ifort.sl  run_test.cmake
data_files/: correlation.txt  photon.txt  photon_10K.txt  states.txt  states_10K.txt  tau.txt  time.txt  time_10K.txt
data_files/omega=1.0_D_a=-60.0_D_b=60.0_kappa_a=30.0_kappa_b=30.0/: correlation.txt  tau.txt
data_files/omega=40.0_D_a=70.0_D_b=-70.0_kappa_a=30.0_kappa_b=30.0/: correlation.txt  tau.txt
matrix_form/: README.md  cross_correlation_matrix.f90
slurm/: CMakeLists.txt  _run-array.sl  run-array.py
